# NEAT

./: .gitignore  LICENSE  NEAT.spec  NEAT_v4.5.3_beta.py  README.md  User manual.md  paper.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
NEAT/: NEAT.py  __init__.py  app.py
NEAT/core/: __init__.py  fitting.py
NEAT/ui/: __init__.py  dialogs.py  main_window.py  utils.py
NEAT/ui/mixins/: fitting.py  postprocessing.py  preprocessing.py
NEAT/workers/: __init__.py  batch.py  preprocessing.py
docs/paper/: paper.bib  paper.docx  paper.md  paper.txt
tests/: test_core_bragg_edges.py  test_fitting_headless.py  test_preprocessing_tiff.py
