[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NEAT"
version = "4.6.0"
description = "Bragg edge imaging data analysis."
authors = [
    { name = "Ruiyao Zhang", email = "ruiyao.zhang@stfc.ac.uk" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "PyQt5>=5.15",
    "matplotlib>=3.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5",
    "pandas>=1.5",
    "psutil>=5.9"
]

[project.scripts]
neat = "NEAT.app:main"
